[package]
name = "save-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nom = "7.1.1"
uuid = "1.0.0"
nom-derive = "0.10.0"
nom_locate = "4.0.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
