[package]
name = "uesave"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
uuid = { version = "1.0.0", features = ["serde"] }
anyhow = "1.0.58"
serde = { version = "1.0.91", features = ["derive"] }
clap = { version = "4.0.32", features = ["derive"] }
serde_json = "1.0.91"
tempfile = "3.3.0"
thiserror = "1.0.38"

[dev-dependencies]
pretty_assertions = "1.2.1"
