[package]
name = "uesave"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
byteorder = "1.5.0"
uuid = { version = "1.6.1", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
indexmap = { version = "2.1.0", features = ["serde"] }
bitflags = "2.6.0"
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.4.0"
